--- a/site.yml
+++ b/site.yml
@@ -4,4 +4,15 @@
   roles:
 
     - common
+
+- hosts: web
+  become: yes
+  roles:
+    - web
+
+-hosts: db 
+  become: yes
+  roles:
+    - db
+
     
