--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -1,2 +1,9 @@
 ---
 # tasks file for web
+
+- name: install apache
+  yum: name=httpd state=installed
+
+- name: copy index file to check php is working with apache
+  copy: src=/var/www/html/mediawiki/index.php dest=/var/www/html/index.php
+  notify: restart apache service
