--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -4,6 +4,9 @@
 - name: install apache
   yum: name=httpd state=installed
 
+- name: Start apache service
+  service: name=httpd state=started enabled=yes
+
 - name: copy index file to check php is working with apache
   copy: src=/var/www/html/mediawiki/index.php dest=/var/www/html/index.php
   notify: restart apache service
